# upload_file

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
scripts/: build_script.sh  gen_can_test_interface.sh
src/scaler/: Cargo.toml  scaler.did
src/scaler/src/: lib.rs  state.rs
src/storage/: Cargo.toml  storage.did
src/storage/src/: asset_handler.rs  candid_file_generator.rs  canister_method.rs  chunk_handler.rs  http_handler.rs  init.rs  lib.rs  memory.rs  state.rs  utils.rs
src/storage_backend/: Cargo.toml
tests/: storage.test.cjs  utils.cjs
wasm_files/: scaler.wasm  storage.wasm
