[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.1"
candid  = "0.9.9"
serde  = { workspace = true, features = ["derive"] }
ic-cdk-timers = { workspace = true }
crc32fast = "1.3.2"
ic-stable-structures = "0.6.0-beta.2"